--- a/client/src/styles/globalStyles.scss
+++ b/client/src/styles/globalStyles.scss
@@ -68,8 +68,20 @@ body {
 						box-shadow: 1px 0 5px rgba(2, 2, 2, 0.5);
 						z-index: 1;
 
-						.ant-list * {
-							color: #ffffff;
+						.ant-list {
+							* {
+								color: #ffffff;
+
+								span.unread {
+									position: absolute;
+									top: 0;
+									right: 0;
+									width: 10px;
+									height: 10px;
+									border-radius: 50%;
+									background-color: red;
+								}
+							}
 						}
 
 						.fab-new {
